# TundraCode

./: .gitignore  .gitignore9  Cargo.toml  README.md  package-lock.json  r.md  tundracode_spec_v2.md
.tundracode/plans/: audita_los_errores_tanto_tecnicos_como_de_diseño_d_20260605-230615.md  hola_20260605-230428.md  hola_20260606-011722.md  lee_el_proyecto_y_haz_un_razonamiento_sobre_incons_20260605-234209.md  lee_el_proyecto_y_haz_un_razonamiento_sobre_incons_20260605-234329.md  quiero_que_planifiquemos_un_archivo_md_para_las_re_20260606-011931.md
crates/tundracode-agents/: Cargo.toml
crates/tundracode-agents/src/: agent.rs  ask_agent.rs  build_agent.rs  build_config.rs  compaction.rs  context_manager.rs  events.rs  factory.rs  lib.rs  loop.rs  memory.rs  plan_agent.rs  profile.rs  structured_plan.rs  system_agent.rs  task.rs  task_tool.rs
crates/tundracode-agents/src/prompts/: ask.txt  build.txt  compaction_summarizer.txt  explorer.txt  plan.txt  reviewer.txt  scout.txt  session_summarizer.txt  title_generator.txt
crates/tundracode-agents/src/subagent/: mod.rs  pool.rs  types.rs
crates/tundracode-config/: Cargo.toml
crates/tundracode-config/src/: lib.rs  settings.rs  storage.rs
crates/tundracode-core/: Cargo.toml
crates/tundracode-core/src/: editor.rs  file_manager.rs  lib.rs  workspace.rs
crates/tundracode-git/: Cargo.toml
crates/tundracode-git/src/: lib.rs  operations.rs  repository.rs
crates/tundracode-lsp/: Cargo.toml
crates/tundracode-lsp/src/: client.rs  diagnostics.rs  lib.rs  protocol.rs
crates/tundracode-models/: Cargo.toml
crates/tundracode-models/src/: conversation.rs  credentials.rs  lib.rs  local.rs  model_registry.rs  provider.rs  remote.rs  tool_format.rs
crates/tundracode-models/src/providers/: anthropic.rs  google.rs  mod.rs  ollama.rs  openai_compat.rs
crates/tundracode-permissions/: Cargo.toml
crates/tundracode-permissions/src/: audit.rs  capability.rs  guard.rs  lib.rs  policy.rs
crates/tundracode-security/: Cargo.toml
crates/tundracode-security/src/: keyring.rs  lib.rs  path_guard.rs  sandbox.rs
crates/tundracode-tools/: Cargo.toml
crates/tundracode-tools/src/: command_tools.rs  fs_tools.rs  lib.rs  patch_tools.rs  registry.rs  search_tools.rs  tool.rs
docs/: DEVELOPMENT.md
packaging/flatpak/: build.sh  com.tundracode.dev.desktop  com.tundracode.dev.metainfo.xml  com.tundracode.dev.yml  generate-sources.sh
packaging/targz/: build.sh
scripts/: strip_comments.py
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: credentials.rs  lib.rs  main.rs  orchestrator.rs  streaming.rs
src/modules/: project-index.js  session.js  snippets.js  tools-ui.js
src/styles/: main.css
src/utils/: icon-cache.js  icons.js  syntax-worker.js  syntax.js  toolTemplates.js
