[workspace]
members = [
    "src-tauri",
    "crates/tundracode-core",
    "crates/tundracode-tools",
    "crates/tundracode-agents",
    "crates/tundracode-models",
    "crates/tundracode-lsp",
    "crates/tundracode-git",
    "crates/tundracode-config",
    "crates/tundracode-security",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TundraCode Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tundracode/tundracode"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"


tauri = { version = "2", features = [] }
tauri-build = { version = "2" }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"


futures = "0.3"
async-trait = "0.1"


reqwest = { version = "0.11", features = ["json"] }


dirs = "5.0"
walkdir = "2.4"


keyring = "2.3"


git2 = "0.18"


lsp-types = "0.94"


tree-sitter = "0.20"


toml = "0.8"


tokio-test = "0.4"
mockall = "0.12"


similar = "2.5"
