[package]
name = "src-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "TundraCode - IDE agéntico (Tauri application)"

[lib]
name = "tundracode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-dialog = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
keyring = "2"
reqwest = { version = "0.11", features = ["json"] }
dirs = "5"
chrono = "0.4"


tundracode-core = { path = "../crates/tundracode-core" }
tundracode-tools = { path = "../crates/tundracode-tools" }
tundracode-agents = { path = "../crates/tundracode-agents" }
tundracode-models = { path = "../crates/tundracode-models" }
tundracode-lsp = { path = "../crates/tundracode-lsp" }
tundracode-git = { path = "../crates/tundracode-git" }
tundracode-config = { path = "../crates/tundracode-config" }
tundracode-security = { path = "../crates/tundracode-security" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { workspace = true }
