[package]
name = "tundracode-git"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Integración Git para TundraCode"

[dependencies]
tundracode-core = { path = "../tundracode-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
git2 = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
