[package]
name = "tundracode-permissions"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
globset = "0.4"
regex = "1"
futures = "0.3"
tundracode-security = { path = "../tundracode-security" }
