[package]
name = "tundracode-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Seguridad y gestión de credenciales para TundraCode"

[dependencies]
tundracode-core = { path = "../tundracode-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
keyring = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
