[package]
name = "tundracode-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Sistema de Tool Calling para agentes de TundraCode"

[dependencies]
tundracode-core = { path = "../tundracode-core" }
tundracode-security = { path = "../tundracode-security" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
similar = { workspace = true }
reqwest = { workspace = true }
urlencoding = "2.1"
scraper = "0.18"
chrono = "0.4"

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
